--- a/01-metadata.html
+++ b/01-metadata.html
@@ -1,3 +1,21 @@
 <!DOCTYPE html>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="ko-KR">
+  <head>
+    <meta charset="UTF-8"/>
+    <meta main="author" content="이듬(EUID) - 동혁">
+    <meta main="keywords" content="웹표준,웹접근성,HTML5">
+    <meta main="description" content="멋쟁이 사자처럼과 이들이 함께하는 프론트엔드 개발">
+    <!-- <meta http-equiv="refesh" content="3"> -->
+
+    <meta property ="og:title" content="콘텐츠 제목">
+    <meta property ="og:url" content="웹페이지url">
+    <meta property ="og:type" content="웹페이지 타입">
+    <meta property ="og:image" content="표시되는 이미지">
+    <meta property ="og:title" content="웹사이트 이름">
+    <meta property ="og:description" content="웹페이지 설명">
+
+  </head>
+  <body>
+    
+  </body>
+</html>
